@@ -30,13 +30,16 @@ endif
 # than 4 bytes.
 # Lots of routines in math will use FPU, so make math subdir an exception
 # here.
+# In gcc 4.6 (and maybe earlier?) giving -mpreferred-stack-boundary=2 is
+# an error, so don't try to reduce it here like we used to.  We still
+# explicit set -mpreferred-stack-boundary=4 the places where it matters,
+# in case an older compiler defaulted to 2.
 ifeq ($(subdir),math)
 sysdep-CFLAGS += -mpreferred-stack-boundary=4
 else
 ifeq ($(subdir),csu)
 sysdep-CFLAGS += -mpreferred-stack-boundary=4
 else
-sysdep-CFLAGS += -mpreferred-stack-boundary=2
 # Likewise, any function which calls user callbacks
 uses-callbacks += -mpreferred-stack-boundary=4
 # Likewise, any stack alignment tests
